[v1.3] Fully implemented the updater