@@ -68,17 +68,17 @@ public class MainApp extends javax.swing.JFrame {
             ReadableByteChannel rbc2 = Channels.newChannel(srv.openStream());
             FileOutputStream fos2 = new FileOutputStream("updater.jar");
             fos2.getChannel().transferFrom(rbc2, 0, Long.MAX_VALUE);
-            
+
             // Start the updater
-            ProcessBuilder upd = new ProcessBuilder("", "-jar", "updater.jar");
-            Process p = upd.start();
-            
+            Runtime.getRuntime().exec("cmd /c java -jar updater.jar");
+
             System.exit(0);
 
         }
 
         /* End of Updater Script */
         initComponents();
+        jLabel14.setText(myVersion);
     }
 
     /**
@@ -103,6 +103,7 @@ public class MainApp extends javax.swing.JFrame {
         jProgressBar1 = new javax.swing.JProgressBar();
         jLabel10 = new javax.swing.JLabel();
         jLabel11 = new javax.swing.JLabel();
+        jLabel14 = new javax.swing.JLabel();
         jPanel1 = new javax.swing.JPanel();
         jLabel1 = new javax.swing.JLabel();
         jLabel2 = new javax.swing.JLabel();
@@ -116,7 +117,7 @@ public class MainApp extends javax.swing.JFrame {
         jLabel13 = new javax.swing.JLabel();
 
         setDefaultCloseOperation(javax.swing.WindowConstants.EXIT_ON_CLOSE);
-        setTitle("AcerX File Transfer App");
+        setTitle("AcerX File Transfer App v1.3");
         setResizable(false);
 
         jLabel5.setText("IP Address:");
@@ -155,6 +156,8 @@ public class MainApp extends javax.swing.JFrame {
 
         jLabel11.setText("Waiting");
 
+        jLabel14.setText("jLabel14");
+
         javax.swing.GroupLayout jPanel2Layout = new javax.swing.GroupLayout(jPanel2);
         jPanel2.setLayout(jPanel2Layout);
         jPanel2Layout.setHorizontalGroup(
@@ -170,7 +173,8 @@ public class MainApp extends javax.swing.JFrame {
                             .addComponent(jLabel7)
                             .addComponent(jLabel5)
                             .addComponent(jLabel8)
-                            .addComponent(jLabel10))
+                            .addComponent(jLabel10)
+                            .addComponent(jLabel14))
                         .addGap(37, 37, 37)
                         .addGroup(jPanel2Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                             .addGroup(jPanel2Layout.createSequentialGroup()
@@ -204,12 +208,14 @@ public class MainApp extends javax.swing.JFrame {
                 .addGroup(jPanel2Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.BASELINE)
                     .addComponent(jLabel8)
                     .addComponent(jLabel9))
-                .addGroup(jPanel2Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+                .addGroup(jPanel2Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING, false)
                     .addGroup(jPanel2Layout.createSequentialGroup()
                         .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                         .addGroup(jPanel2Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.BASELINE)
                             .addComponent(jLabel10)
-                            .addComponent(jLabel11)))
+                            .addComponent(jLabel11))
+                        .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
+                        .addComponent(jLabel14))
                     .addGroup(jPanel2Layout.createSequentialGroup()
                         .addGap(1, 1, 1)
                         .addComponent(jButton4, javax.swing.GroupLayout.PREFERRED_SIZE, 42, javax.swing.GroupLayout.PREFERRED_SIZE)))
@@ -443,7 +449,6 @@ public class MainApp extends javax.swing.JFrame {
         @Override
         protected void done() {
             jButton4.setEnabled(true);
-            //jProgressBar1.setValue(100);
 
         }
     }
@@ -554,6 +559,7 @@ public class MainApp extends javax.swing.JFrame {
     private javax.swing.JLabel jLabel11;
     private javax.swing.JLabel jLabel12;
     private javax.swing.JLabel jLabel13;
+    private javax.swing.JLabel jLabel14;
     private javax.swing.JLabel jLabel2;
     private javax.swing.JLabel jLabel3;
     private javax.swing.JLabel jLabel4;
